--- a/吉田学園情報ビジネス専門学校　後閑　茜/02_任務遂行！くノ一帰城！の巻/01_制作環境/任務遂行！くノ一帰城の巻.vcxproj.filters
+++ b/吉田学園情報ビジネス専門学校　後閑　茜/02_任務遂行！くノ一帰城！の巻/01_制作環境/任務遂行！くノ一帰城の巻.vcxproj.filters
@@ -87,9 +87,6 @@
     <ClCompile Include="Door.cpp">
       <Filter>ソース ファイル\Object</Filter>
     </ClCompile>
-    <ClCompile Include="fade.cpp">
-      <Filter>ソース ファイル\Object</Filter>
-    </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>ソース ファイル\Mode</Filter>
     </ClCompile>
@@ -164,6 +161,9 @@
     </ClCompile>
     <ClCompile Include="time.cpp">
       <Filter>ソース ファイル\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="fade.cpp">
+      <Filter>ソース ファイル\System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
